...
            .background(Color.White)
            .fillMaxSize()
            .padding(24.dp)
    )
    {
        Text(
            text = "Типизация волос",
            style = MaterialTheme.typography.displayLarge,
            color = DarkGreen
        )

        Spacer(Modifier.height(24.dp))

...
                )
            }

            item {
                FeatureCard(
                    color = LightPink,
                    title = "Пористость волос",
                    height = 120.dp,
                    onClick = { navController.navigate(Screen.PorosityTextTyping.route) }
                )
            }

            item {
...
