...

            ElevatedCard(
                onClick = onSave,
                colors = CardDefaults.cardColors(containerColor = DarkGreen)
            ) {
                Text(
                    text = "Сохранить",
                    color = LightBeige,
                    modifier = Modifier.padding(horizontal = 16.dp, vertical = 8.dp),
                    style = MaterialTheme.typography.bodySmall.copy(fontFamily = Golos)
                )
            }
        }
...
