...
                                onFavoriteClick()
                            },
                            modifier = Modifier.size(24.dp)
                        ) {
                            Icon(
                                imageVector = if (isFavorite) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
                                contentDescription = if (isFavorite) "Удалить из избранного" else "Добавить в избранное",
                                tint = if (isFavorite) AccentPink else Color.Gray
                            )
                        }
                    }

                    Spacer(modifier = Modifier.height(4.dp))
...
