<resources>
    <string name="app_name" translatable="false">curlyLabAndroid</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
</resources>