...
                        Box {
                            IconButton(
                                onClick = { expanded = true }
                            ) {
                                Icon(
                                    Icons.Default.MoreVert,
                                    contentDescription = "More options",
                                    tint = LightPink,
                                    modifier = Modifier
                                        .fillMaxHeight()
                                        .border(
                                            1.dp,
                                            LightPink,
...
                                            tint = LightPink
                                        )
                                    }
                                )

                                DropdownMenuItem(
                                    text = { Text("Удалить аккаунт") },
                                    onClick = {
                                        showDeleteDialog = true
                                        expanded = false
                                    },
                                    leadingIcon = {
                                        Icon(
...
