...
                        onClick = { navController.navigate(Screen.HairTyping.route) })
                }
            }

            item(span = { GridItemSpan(2) }) {
                FeatureCard(color = BrightPink,
                    title = "База средств",
                    height = 132.dp,
                    onClick = { navController.navigate(Screen.Products.route) })
            }
        }
    }
}
...
